# web_axum

./: Cargo.toml
src/: lib.rs  main.rs
src/routes/: hello_world.rs  mirror_body_json.rs  mirror_body_string.rs  mod.rs  path_variables.rs  query_params.rs
